# qpipe

./: .gitattributes  .gitignore  CLA.md  COMMERCIAL.md  Cargo.toml  README.md
.github/scripts/: inject_bins_into_wheel.py  package_release.py
.github/workflows/: release-build.yml  wheels.yaml  wheels.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/qpipe/: __init__.py  work.py
bindings/python/src/: lib.rs
bindings/python/tests/: README.md  conftest.py  test_codecs.py  test_e2e.py  test_e2e_multiframe.py
src/: lib.rs
tests/: cli.rs
